feat: add workspace feature
